Update and rename Homepage.html to index.html

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ a:active {
 
 </style>
 
-    <title>ª RozcestnÌk</title>
+    <title>¬ª Rozcestn√≠k</title>
   </head>
   <body>
     <main>
-        <h1>RozcestnÌk</h1>  
+        <h1>Rozcestn√≠k</h1>  
     </main>
  
 
@@ -67,18 +67,18 @@ a:active {
   <h2>Badatel</h2>
   <ul>
   <li> <a href="https://mapy.cz/turisticka?x=18.2158607&y=49.4124888&z=14" target="_blank">MAPA</a> </li>
-  <li> <a href="https://ags.cuzk.cz/archiv/" target="_blank">ags.cuzk.cz/archiv - cÌsa¯skÈ otisky a dalöÌ</a> </li>
-  <li> <a href="https://geoportal.gov.cz/web/guest/map" target="_blank">Geoportal gov, ortofoto 50. lÈta</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/1207?site=FRONT">IndikaËnÌ skica Hutisko</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/3492?site=FRONT">IndikaËnÌ skica Solanec</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/">IndikaËnÌ skici - vyhled·v·nÌ</a> </li>
-  <li> <a target="_blank" href="https://digi.archives.cz/da/">digi archives Zemsk˝ archiv Opava</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/scitacioperaty/digisada/search">SËÌtacÌ oper·ty MZA</a> </li>
+  <li> <a href="https://ags.cuzk.cz/archiv/" target="_blank">ags.cuzk.cz/archiv - c√≠sa√∏sk√© otisky a dal≈°√≠</a> </li>
+  <li> <a href="https://geoportal.gov.cz/web/guest/map" target="_blank">Geoportal gov, ortofoto 50. l√©ta</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/1207?site=FRONT">Indika√®n√≠ skica Hutisko</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/3492?site=FRONT">Indika√®n√≠ skica Solanec</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/">Indika√®n√≠ skici - vyhled√°v√°n√≠</a> </li>
+  <li> <a target="_blank" href="https://digi.archives.cz/da/">digi archives Zemsk√Ω archiv Opava</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/scitacioperaty/digisada/search">S√®√≠tac√≠ oper√°ty MZA</a> </li>
   <li> <a target="_blank" href="https://kjmalina.cz/">K J Malina</a> </li>
   <li> <a target="_blank" href="http://kramerius.kfbz.cz/periodical/uuid:e1418564-254e-44e1-962e-3fad8799b3f4">Dolina Urgatina</a> </li>
-  <li> <a target="_blank" href="http://dlib.kfbz.cz/periodical/uuid:dbc07fd0-f114-4e83-ae0b-851c8c28c055">Naöe Valaösko</a> </li>
-  <li> <a target="_blank" href="https://www.narodopisnaspolecnost.cz/index.php/ethnographic-journal/the-ditized-ethnographic-journal/item/301-narodopisny-vestnik">N·rodopisn˝ vÏstnÌk</a> </li>
-  <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> »esk· n·rodopisn· spoleËnost </a></li>
+  <li> <a target="_blank" href="http://dlib.kfbz.cz/periodical/uuid:dbc07fd0-f114-4e83-ae0b-851c8c28c055">Na≈°e Vala≈°sko</a> </li>
+  <li> <a target="_blank" href="https://www.narodopisnaspolecnost.cz/index.php/ethnographic-journal/the-ditized-ethnographic-journal/item/301-narodopisny-vestnik">N√°rodopisn√Ω v√¨stn√≠k</a> </li>
+  <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> √àesk√° n√°rodopisn√° spole√®nost </a></li>
   <li> <a target="_blank" href="https://hutisko-solanec.eu/">Hutisko-Solanec WEB</a></li>
   <li> <a target="_blank" href="https://ags.cuzk.cz/geoprohlizec/?k=11273">DMR 5G</a></li>
   </ul> 
@@ -92,11 +92,11 @@ a:active {
   <div class="column">
   <h2>facebook a jine</h2>
   <ul>
-  <li> <a target="_blank" href="https://www.facebook.com/zijuvelkekarlovice/">éiju VelkÈ Karlovice</a> </li>
-  <li> <a target="_blank" href="https://www.facebook.com/zanasekarlovice/">Za naöe Karlovice</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/zijuvelkekarlovice/">≈Ωiju Velk√© Karlovice</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/zanasekarlovice/">Za na≈°e Karlovice</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/VMPRoznov/">VMPRoznov</a> </li>
-  <li> <a target="_blank" href="https://www.facebook.com/muzeumregionuvalassko/">Muzeum regionu Valaösko</a> </li>
-  <li> <a target="_blank" href="https://www.facebook.com/valassko/">Valaösko na star˝ch fotografiÌch</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/muzeumregionuvalassko/">Muzeum regionu Vala≈°sko</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/valassko/">Vala≈°sko na star√Ωch fotografi√≠ch</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/groups/108582776792/">Hutisko group</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/ticroznovpodradhostem/">ticroznov</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/icvelkekarlovice/">icvk</a> </li>
@@ -113,7 +113,7 @@ a:active {
   <h2>videa a hudba</h2>
   <ul>
   <li><a target="_blank" href="https://photomania.net/select-photo">PhotoMania uprava fotek</a></li>
-  <li><a target="_blank" href="https://imgupscaler.com/">IMG upscale jen 5 t˝dnÏ</a></li>
+  <li><a target="_blank" href="https://imgupscaler.com/">IMG upscale jen 5 t√Ωdn√¨</a></li>
   <li><a target="_blank" href="https://www.upscale.media/upload">Upscale media</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
@@ -121,8 +121,8 @@ a:active {
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.youtube.com/watch?v=Bikbk8ogq-s">SychrovNET Mal· Lhota</a></li>
-  <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prost¯ednÌ BeËva</a></li>
+  <li><a target="_blank" href="https://www.youtube.com/watch?v=Bikbk8ogq-s">SychrovNET Mal√° Lhota</a></li>
+  <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prost√∏edn√≠ Be√®va</a></li>
   </ul> 
   </div>
  
