--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="cz">
-  <head>
-
-<meta charSet="utf-8"/>
-
+<HEAD>
+  <META http-equiv="content-type" content="text/html; charset=windows-1250">
 
 <style>
 body {
