--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="cz">
-<HEAD>
-  <META http-equiv="content-type" content="text/html; charset=windows-1250">
+<html lang="cs">
+<head>
+<meta name="viewport" content="width=device-width"/>
+<meta charSet="utf-8"/>
 
 <style>
 body {
