--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@ a:active {
   <h2>Badatel</h2>
   <ul>
   <li> <a href="https://mapy.cz/turisticka?x=18.2158607&y=49.4124888&z=14" target="_blank">MAPA</a> </li>
-  <li> <a href="https://ags.cuzk.cz/archiv/" target="_blank">ags.cuzk.cz/archiv - císaøské otisky a další</a> </li>
+  <li> <a href="https://ags.cuzk.cz/archiv/" target="_blank">ags.cuzk.cz/archiv - císařské otisky a další</a> </li>
   <li> <a href="https://geoportal.gov.cz/web/guest/map" target="_blank">Geoportal gov, ortofoto 50. léta</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/1207?site=FRONT">Indikaèní skica Hutisko</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/3492?site=FRONT">Indikaèní skica Solanec</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/">Indikaèní skici - vyhledávání</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/1207?site=FRONT">Indikační skica Hutisko</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/detail/3492?site=FRONT">Indikační skica Solanec</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/indikacniskici/skica/">Indikační skici - vyhledávání</a> </li>
   <li> <a target="_blank" href="https://digi.archives.cz/da/">digi archives Zemský archiv Opava</a> </li>
-  <li> <a target="_blank" href="https://www.mza.cz/scitacioperaty/digisada/search">Sèítací operáty MZA</a> </li>
+  <li> <a target="_blank" href="https://www.mza.cz/scitacioperaty/digisada/search">Sčítací operáty MZA</a> </li>
   <li> <a target="_blank" href="https://kjmalina.cz/">K J Malina</a> </li>
   <li> <a target="_blank" href="http://kramerius.kfbz.cz/periodical/uuid:e1418564-254e-44e1-962e-3fad8799b3f4">Dolina Urgatina</a> </li>
   <li> <a target="_blank" href="http://dlib.kfbz.cz/periodical/uuid:dbc07fd0-f114-4e83-ae0b-851c8c28c055">Naše Valašsko</a> </li>
-  <li> <a target="_blank" href="https://www.narodopisnaspolecnost.cz/index.php/ethnographic-journal/the-ditized-ethnographic-journal/item/301-narodopisny-vestnik">Národopisný vìstník</a> </li>
-  <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> Èeská národopisná spoleènost </a></li>
+  <li> <a target="_blank" href="https://www.narodopisnaspolecnost.cz/index.php/ethnographic-journal/the-ditized-ethnographic-journal/item/301-narodopisny-vestnik">Národopisný věstník</a> </li>
+  <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> Česká národopisná společnost </a></li>
   <li> <a target="_blank" href="https://hutisko-solanec.eu/">Hutisko-Solanec WEB</a></li>
   <li> <a target="_blank" href="https://ags.cuzk.cz/geoprohlizec/?k=11273">DMR 5G</a></li>
   </ul> 
@@ -114,7 +114,7 @@ a:active {
   <h2>videa a hudba</h2>
   <ul>
   <li><a target="_blank" href="https://photomania.net/select-photo">PhotoMania uprava fotek</a></li>
-  <li><a target="_blank" href="https://imgupscaler.com/">IMG upscale jen 5 týdnì</a></li>
+  <li><a target="_blank" href="https://imgupscaler.com/">IMG upscale jen 5 týdně</a></li>
   <li><a target="_blank" href="https://www.upscale.media/upload">Upscale media</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
@@ -123,7 +123,7 @@ a:active {
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
   <li><a target="_blank" href="https://www.youtube.com/watch?v=Bikbk8ogq-s">SychrovNET Malá Lhota</a></li>
-  <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prostøední Beèva</a></li>
+  <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prostřední Bečva</a></li>
   </ul> 
   </div>
  
