--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width"/>
 <meta charSet="utf-8"/>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 <style>
 body {
