--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a:active {
   <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> Česká národopisná společnost </a></li>
   <li> <a target="_blank" href="https://hutisko-solanec.eu/">Hutisko-Solanec WEB</a></li>
   <li> <a target="_blank" href="https://ags.cuzk.cz/geoprohlizec/?k=11273">DMR 5G</a></li>
-  <li> <a target="_blank" href="https://jonatankolegar.github.io/kolejo/qgis2web_2024_02_03-13_05_33_880025/mapaH-S.html">qgis2web pokus 1</li>
+  <li> <a target="_blank" href="https://jonatankolegar.github.io/kolejo/qgis2web_2024_02_03-13_05_33_880025/mapaH-S.html">qgis2web pokus 1</a></li>
   </ul> 
   </div>
 
