--- a/index.html
+++ b/index.html
@@ -113,17 +113,11 @@ a:active {
   
 
   <div class="column">
-  <h2>videa a hudba</h2>
+  <h2>uzitecne odkazy</h2>
   <ul>
   <li><a target="_blank" href="https://photomania.net/select-photo">PhotoMania uprava fotek</a></li>
-  <li><a target="_blank" href="https://imgupscaler.com/">IMG upscale jen 5 týdně</a></li>
-  <li><a target="_blank" href="https://www.upscale.media/upload">Upscale media</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
-  <li><a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a></li>
+  <li><a target="_blank" href="www.iloveimg.com/">IMG upscale</a></li>
+  <li><a target="_blank" href="https://create.pixelcut.ai/upscaler">IMG upscale dalsi</a></li>
   <li><a target="_blank" href="https://www.youtube.com/watch?v=Bikbk8ogq-s">SychrovNET Malá Lhota</a></li>
   <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prostřední Bečva</a></li>
   </ul> 
