--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ summary::-webkit-details-marker {
   <li> <a target="_blank" href="https://www.facebook.com/icvelkekarlovice/">icvk</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/CsopSalamandr/">Salamandr</a> </li>
   <li> <a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a> </li>
+  <li> <a target="_blank" href="https://www.okobeskyd.cz/">Oko Beskyd</a> </li> 
   <li> . </li>
   <li> <a target="_blank" href="https://www.facebook.com/mistoproblemu">FB mistoproblemu</a> </li>
   <li> <a target="_blank" href="https://www.mistoproblemu.cz/">web mistoproblemu</a> </li>
@@ -142,7 +143,7 @@ summary::-webkit-details-marker {
   <h2>uzitecne odkazy</h2>
   <ul>
   <li><a target="_blank" href="https://photomania.net/select-photo">PhotoMania uprava fotek</a></li>
-  <li><a target="_blank" href="www.iloveimg.com/">IMG upscale</a></li>
+  <li><a target="_blank" href="https://www.iloveimg.com/">IMG upscale</a></li>
   <li><a target="_blank" href="https://create.pixelcut.ai/upscaler">IMG upscale dalsi</a></li>
   <li><a target="_blank" href="https://www.youtube.com/watch?v=Bikbk8ogq-s">SychrovNET Malá Lhota</a></li>
   <li><a target="_blank" href="https://www.youtube.com/watch?v=-2rSZxSkHS8">SychrovNET Prostřední Bečva</a></li>
