--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ summary::-webkit-details-marker {
   <li> <a target="_blank" href="http://dlib.kfbz.cz/periodical/uuid:dbc07fd0-f114-4e83-ae0b-851c8c28c055">Naše Valašsko</a> </li>
   <li> <a target="_blank" href="https://www.narodopisnaspolecnost.cz/index.php/ethnographic-journal/the-ditized-ethnographic-journal/item/301-narodopisny-vestnik">Národopisný věstník</a> </li>
   <li> <a href="https://www.narodopisnaspolecnost.cz/" target="_blank"> Česká národopisná společnost </a></li>
+  <li> <a target="_blank" href="https://xkcd.com">XKCD</a> </li>
   <li> <a target="_blank" href="https://hutisko-solanec.eu/">Hutisko-Solanec WEB</a></li>
   <li> <a target="_blank" href="https://ags.cuzk.cz/geoprohlizec/?k=11273">DMR 5G</a></li>
   <li> <a target="_blank" href="https://jonatankolegar.github.io/kolejo/qgis2web_2024_02_03-13_05_33_880025/mapaH-S.html">qgis2web pokus 1</a></li>
@@ -131,6 +132,11 @@ summary::-webkit-details-marker {
   <li> <a target="_blank" href="https://www.facebook.com/icvelkekarlovice/">icvk</a> </li>
   <li> <a target="_blank" href="https://www.facebook.com/CsopSalamandr/">Salamandr</a> </li>
   <li> <a target="_blank" href="https://www.salamandr.info/aktuality">Salamandr WEB</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/p/Místní-akční-skupina-Rožnovsko-zs-100070748754821/">MAS Rožnovsko</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/groups/205201989528759/">MAS Rožnovsko skupina</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/Roznovsko/">Mikroregion Rožnovsko</a> </li>
+  <li> <a target="_blank" href="https://www.facebook.com/aopkcr">AOPK stránka</a> </li>
+  <li> <a target="_blank" href="https://beskydy.nature.cz/vsechny-aktuality">CHKO Beskydy aktuality</a> </li>
   <li> <a target="_blank" href="https://www.okobeskyd.cz/">Oko Beskyd</a> </li> 
   <li> . </li>
   <li> <a target="_blank" href="https://www.facebook.com/mistoproblemu">FB mistoproblemu</a> </li>
@@ -167,7 +173,7 @@ summary::-webkit-details-marker {
 <details>
   <summary>
     What is the meaning of life?
-    <span class="icon">👇</span>
+    <span class="icon">TADY</span>
   </summary>
   <p>
     42
