--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@ summary::-webkit-details-marker {
   <li> <a target="_blank" href="https://www.facebook.com/aopkcr">AOPK stránka</a> </li>
   <li> <a target="_blank" href="https://beskydy.nature.cz/vsechny-aktuality">CHKO Beskydy aktuality</a> </li>
   <li> <a target="_blank" href="https://www.okobeskyd.cz/">Oko Beskyd</a> </li> 
+  <li> <a target="_blank" href="https://www.facebook.com/SIMIDCR">SIMID CR</a> </li> 
+  <li> <a target="_blank" href="https://www.facebook.com/visitvalassko">visitvalassko</a> </li> 
+  <li> <a target="_blank" href="https://www.facebook.com/people/MAGNI-GYRO-Czech-Slovakia/100083340692760/">magnigyro</a> </li> 
+  <li> <a target="_blank" href="https://www.facebook.com/MaticeRadhostska/">Matice Radhošťská</a> </li> 
+  <li> <a target="_blank" href="https://www.facebook.com/josef.krupa.7">Josef Krůpa fotograf</a> </li> 
+    
+
+    
   <li> . </li>
   <li> <a target="_blank" href="https://www.facebook.com/mistoproblemu">FB mistoproblemu</a> </li>
   <li> <a target="_blank" href="https://www.mistoproblemu.cz/">web mistoproblemu</a> </li>
@@ -161,6 +169,7 @@ summary::-webkit-details-marker {
   <h2>reddit</h2>
   <ul>
   <li> <a target="_blank" href="https://old.reddit.com/">Reddit</a> </li>
+  <li> <a target="_blank" href="https://old.reddit.com/r/ObsidianMD/">ObsidianMD</a> </li>
   <li> <a target="_blank" href="https://old.reddit.com/r/czechmemes/">czech memes</a> </li>
   <li> <a target="_blank" href="https://old.reddit.com/r/Thief/">Thief</a> </li>
   <li> <a target="_blank" href="https://old.reddit.com/r/DotA2/">DotA 2</a> </li>
