--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ summary::-webkit-details-marker {
 <details>
   <summary>
     What is the meaning of life?
-    <span class="icon">TADY</span>
+    <span class="icon">Funguj</span>
   </summary>
   <p>
     42
